--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "flatted": "^3.0.4",
     "node-fetch": "^2.6.0",
     "path": "^0.12.7"
   }
