Create server.js to serve trie json to front-end

--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "node TrieTests/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "flatted": "^3.0.4",
     "node-fetch": "^2.6.0",
     "path": "^0.12.7"
